--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/kyleb740/foodShare#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.1.5",
+    "node-mailjet": "^3.2.1"
   }
 }
